removed unused containers/components/code. cleaned code, updated server middlewares

--- a/server/config.env
+++ b/server/config.env
@@ -8,10 +8,6 @@ DATABASE_USER=admin
 DATABASE_PASSWORD=jK2XOQt1YINRThtn
 DATABASE_LOCAL=mongodb:://localhost:27017/gotham-capital
 
-MAIL_FROM=deallie.jamal@gmail.com
-MAIL_TO=byanymeansdigital.test@gmail.com
-SENDGRID_USERNAME =SENDGRID_API_KEY
-SENDGRID_PASSWORD=+iYSAuCq73Q=e?V1985
 
 EMAIL_FROM=test@email.com
 
@@ -23,3 +19,9 @@ MAIL_PASS=cfd2db687cdb7a
 
 EMAIL_USERNAME=email-test
 EMAIL_PASSWORD=password-test
+
+WEB_APP_URL=http://localhost:3000
+
+MAIL_FROM=deallie.jamal@gmail.com
+MAIL_TO=byanymeansdigital.test@gmail.com
+SENDGRID_API_KEY=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
