--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "engines": {
+    "node": "17.x"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "dependencies": {
     "@sendgrid/mail": "^7.6.2",
     "bcryptjs": "^2.4.3",
